# ModernCpp

./: .gitgnore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/linux-x86-32/: toolchain.cmake
cmake/linux-x86-64/: toolchain.cmake
cmake/windows-x86-32/: toolchain.cmake
cmake/windows-x86-64/: toolchain.cmake
cmake/windows-x86-64-coverage/: toolchain.cmake
scripts/: generate_coverage.bat
src/: CMakeLists.txt  main.cpp
src/utils/: CMakeLists.txt  smoke.cpp  smoke.h
test/: CMakeLists.txt
test/utils/: smoke_test.cpp
